--- a/index.css
+++ b/index.css
@@ -212,6 +212,48 @@ footer a:hover, footer a:active {
 
 /* ---------- End Index.html code ---------- */
 
-/* ------- Begin services.html code ------- */
+/* ---------- Begin services.html code ---------- */
 
-/* Begin main image code
+#topofpage {
+	margin-top: 105px;
+	width: 100%;
+	margin: 0 auto;
+	display: flex;
+		flex-direction: column;
+		justify-content: center;
+		flex-wrap: nowrap;
+		align-items: center;
+		align-content: stretch;
+}
+#mainimg{
+	margin: 115px 0px 10px 0px;
+}
+#services-header-img{
+	text-align: center;
+}
+
+#maintxt, #flexarea, #services-bottom{
+	padding: 5px 60px;
+}
+
+#flexarea{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+	border-bottom: 2px solid black;
+	margin-bottom: 35px;
+	padding-bottom: 30px;
+	margin-top: 0px;
+}
+.box{
+	border: 1.95px double black;
+	border-style: border-box;
+	background-color: lightgray;
+	padding: 15px;
+	height: 230px;
+	width: 380px;
+	margin: 15px;
+}
+/* ---------- End Index.html code ---------- */
+
+
