--- a/index.css
+++ b/index.css
@@ -254,6 +254,61 @@ footer a:hover, footer a:active {
 	width: 380px;
 	margin: 15px;
 }
+
+#services-bottom {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
+.half-section{
+	padding: 15px;
+	height: 270px;
+	width: 400px;
+	margin: 15px;
+	
+}
+.services-info-img{
+	width: 100%;
+	height: 100%;
+}
+.list {
+	list-style-type: square;
+	line-height: 1.5;
+	padding-left: 20px;
+}
+.rounded{
+	margin-top: 12px;
+	height: 20%;
+	width: 45%;
+	border-radius: 15px;
+	border: 2px solid black;
+}
+.rounded:hover {
+	background-color: rgb(1, 64, 136);
+	color: white;
+}
+.box P:hover, #maintxt:hover{
+		color:  rgb(1, 64, 136);
+		font-weight: bold;
+}
+
+#header #navmenu a:active{
+	color: rgb(1, 64, 136);
+	background-color: white;
+}
+
+#header #navmenu a, .rounded{
+	cursor: pointer;
+}
+.active{
+	background-color: white;
+	color:rgb(1, 64, 136);
+	border-radius: 90%;
+	font-weight: bolder;
+	font-size: 25px;
+	padding: 10px;
+}
 /* ---------- End Index.html code ---------- */
 
 
